# pinit

./: .gitignore  LICENSE  README.md
nui/pinit/: README.md  gi.css  index.html  main.py  mi.css  package-lock.json  package.json  tailwind.config.js
nui/pinit/src/: App.vue  main.js  output.css
nui/pinit/src/components/: add.vue  edit.vue
nui/pinit/src/style/: main.css
onefile/: main.py  makefile  requirements.txt  shortcut.py
onefile/ui/: index.html
onefile/ui/assets/: index-306d0d57.js  index-3bb4107b.css  index-57d72dfa.js  index-5fedd6db.css  index-91d417c9.js  index-ea10e7d6.css
pinit/: README.md  pyproject.toml
pinit/pinit/: main.py
pinit/pinit/.pinit/: install.py  main.py  requirements.txt  shortcut.py  uninstall.py  upgrade.py
pinit/pinit/.pinit/ui/: index.html
pinit/pinit/.pinit/ui/assets/: index-04ecf754.css  index-87fbf94b.css  index-88a0609b.css  index-8ffc9838.css  index-a407b3b0.js  index-bfd90ee1.js  index-ccd36580.js
ui/: index.html  package-lock.json  package.json
ui/src/: App.vue  main.js
ui/src/components/: add.vue
ui/src/style/: main.css
